fix: improve button text color for better contrast

--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -23,6 +23,7 @@
 
 .delete {
   background-color: #e74c3c;
+  color: #000;
 }
 
 .form {
